<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player_details_full"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="com.angeloparenteapp.kmk_kissmarrykill.PlayerDetails">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#FFFFFF"
        android:hint="@string/insert_your_name"
        android:inputType="text"
        android:layout_marginBottom="49dp"
        android:layout_above="@+id/select_image_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/select_image_button"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:background="@drawable/oval"
        android:text="@string/select_image"
        android:textColor="#000000"
        android:textSize="28sp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:background="@drawable/oval"
        android:text="@string/next"
        android:textColor="#000000"
        android:textSize="28sp" />

    <Button
        android:id="@+id/ok"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/oval"
        android:text="Submit"
        android:textColor="#000000"
        android:textSize="28sp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_alignBaseline="@+id/button_next"
        android:layout_alignBottom="@+id/button_next"
        android:layout_alignParentStart="true" />

</RelativeLayout>
